# NodeImageProcessing

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
source/: BinarizationNode.cpp  BinarizationNode.hpp  Clock.hpp  EdgeDetectionNode.cpp  EdgeDetectionNode.hpp  GrayScalingNode.cpp  GrayScalingNode.hpp  ImageNode.cpp  ImageNode.hpp  ImageSourceNode.cpp  ImageSourceNode.hpp  InformationNode.cpp  InformationNode.hpp  NodeBase.hpp  NodeEditor.cpp  NodeEditor.hpp  NodeStyle.hpp  VideoNode.cpp  VideoNode.hpp  VideoSourceNode.cpp  VideoSourceNode.hpp  Window.cpp  Window.hpp  main.cpp  test.cpp
